--- a/src/components/Register/FormOne/FormOne.scss
+++ b/src/components/Register/FormOne/FormOne.scss
@@ -14,7 +14,7 @@
     display: flex;
     flex-direction: column;
     margin: 0 auto;
-    width: 90vw;
+    width: 90%;
 
     #upload-photo {
       opacity: 0;
