--- a/src/components/Register/FormTwo/FormTwo.scss
+++ b/src/components/Register/FormTwo/FormTwo.scss
@@ -8,7 +8,7 @@
 
     &__title{
 
-        width: 90vw;
+        width: 90%;
         text-align: center;
         padding: 0 25px;
         box-sizing: border-box;
@@ -29,7 +29,7 @@
     &__form {
 
         display: flex;
-        width: 90vw;
+        width: 90%;
         flex-direction: column;
         margin-top: 40px;
 
