--- a/src/components/Dropdown/Dropdown.scss
+++ b/src/components/Dropdown/Dropdown.scss
@@ -1,8 +1,8 @@
 @import "../../index.scss";
 
 .navbar {
-  width: 100vw;
-  height: 100vh;  
+  width: 100%;
+  height: 100%;  
   background-color: rgba(0, 0, 0, 0.356);
   display: none;
   flex-direction: column;
@@ -63,12 +63,12 @@
 
 .dropmenu {
   
-  width: 100vw;
-  height: 100vh;  
+  width: 100%;
+  height: 100%;  
   background-color: rgba(0, 0, 0, 0.356);
   display: flex;
   flex-direction: column;
-  position: fixed;
+  position: absolute;
   top: 0; 
   z-index: 10;
 
