--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,9 +1,8 @@
 @import "../../index.scss";
 
-.footer{
-    width: 100%;
-    position: fixed;
-    bottom: 0;
+.footer{  
+    
+    width: 375px;  
     background: rgb(255, 255, 255);
     z-index: 11;
     &__nav{
