--- a/src/components/Register/FormFour/FormFour.scss
+++ b/src/components/Register/FormFour/FormFour.scss
@@ -11,7 +11,7 @@
 
     &__title {
 
-        width: 90vw;
+        width: 90%;
         display: flex;
         flex-direction: column;
         align-items: center;
