--- a/src/components/Register/FormThree/FormThree.scss
+++ b/src/components/Register/FormThree/FormThree.scss
@@ -7,7 +7,8 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    align-items: center;   
+    align-items: center;
+    position: relative;   
 
     &__title {
         width: 100%;
