--- a/src/components/ScannerResult/ScannerResult.scss
+++ b/src/components/ScannerResult/ScannerResult.scss
@@ -4,7 +4,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 100%;
+   // height: 100%;
     align-items: center;
     text-align: center;
     &__header {
@@ -106,6 +106,10 @@
         
     }
     &__info{
+
+        display: flex;
+        flex-direction: column;
+        width: 90%;
         h3{
             margin-top: 100px
         }
@@ -122,15 +126,19 @@
     }
     &__btn {
 
-        button {
-        
-            width: 70%;
+        position: relative;
+        display: flex;
+        // background: lightcoral;
+        width: 100%; 
+        justify-content: center;       
+
+        button {        
+            width: 80%;
             height: 55px;
-            
+            margin: 10px 0;            
             border: none;
             font-weight: 600;
-            font-size: 16px;
-            margin: 20px 0;
+            font-size: 16px;            
             color: #ffffff;
             background: $secondaryColor;
             letter-spacing: 0.06em;
@@ -141,14 +149,8 @@
             cursor: pointer;
             transition-duration: 0.4s;
             -webkit-transition-duration: 0.4s;
-            position: absolute;
-            top: 750px;
-            bottom: 0px ;
-            left: 50px;
-            right: 0;
             background-color: $secondaryColor;
             border-radius: 10px;
-            
             color: white;
             box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
             
@@ -175,10 +177,8 @@
 
             &:active:after {
 
-                box-shadow: 0 0 0 0 rgba(177, 177, 177, 0.322);
-             
-                border-radius: 10px;
-               
+                box-shadow: 0 0 0 0 rgba(177, 177, 177, 0.322);             
+                border-radius: 10px;               
                 opacity: 1;
                 transition: 0s;
 
