--- a/src/index.scss
+++ b/src/index.scss
@@ -5,10 +5,21 @@ $green: #28b56d;
 $yellow: #ffcc00;
 $grey: #c4c4c4;
 
+
 body {
-  margin: 0;
-  padding: 0;
+  
   font-family: "Montserrat", sans-serif;
+  margin: 0;
+  padding: 0;    
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  //border: 1px solid rgb(0, 0, 0);
+  height: 99vh;
+  background: #000000; 
+  width: 99vw;
+  
+  
 }
 
 * {
