--- a/src/pages/LoginPage/LoginPage.scss
+++ b/src/pages/LoginPage/LoginPage.scss
@@ -14,7 +14,7 @@
   }
 
   &__title {
-    width: 90vw;
+    width: 90%;
 
     h3 {
       font-size: 20px;
@@ -23,7 +23,7 @@
   }
 
   &__form {
-    width: 90vw;
+    width: 90%;
 
     &--inp {
       display: flex;
