--- a/src/pages/ResgisterPage/RegisterPage.scss
+++ b/src/pages/ResgisterPage/RegisterPage.scss
@@ -4,7 +4,7 @@
     display: flex;  
     flex-direction: column;  
     width: 100%;
-    height: 100vh;
+    height: 100%;
 
     &__header {
 
@@ -43,7 +43,7 @@
     &__pagination {
 
         width: 100%;
-        height: 100vh;
+        height: 100%;
         display: flex;
         flex-direction: column;     
 
