--- a/src/pages/OnboardingPage/OnboardingPage.scss
+++ b/src/pages/OnboardingPage/OnboardingPage.scss
@@ -4,33 +4,29 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 100vh;
+    height: 100%;
     overflow: hidden;
+  
+
     &__title{
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
         width: 100%;
-        height: 400px;
+        margin: 100px 0;
+      
        
         
     }
     &__logo{   
         display: flex;
-         height: 100%;
-         width: 100%;
+        height: 100%;
+        width: 100%;
         align-items: flex-end;
-        justify-content:center;
-        
-        
-         
-         
+        justify-content:center;   
 
-       
-
-        img{
-            
+        img{           
            
             animation: rotation 25s infinite linear;
             height:500px;
@@ -55,7 +51,7 @@
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;    
-    height: 90vh;
+    height: 85%;
     
     &__logo {
         
