--- a/src/index.scss
+++ b/src/index.scss
@@ -15,9 +15,7 @@ body {
   justify-content: center;
   align-items: center;
   //border: 1px solid rgb(0, 0, 0);
-  height: 99vh;
-  background: #000000; 
-  width: 99vw;
+  // background: #000000;  
   
   
 }
@@ -25,6 +23,7 @@ body {
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box; 
 }
 
 a{
